[package]
name = "aoc2018"
version = "0.1.0"
edition = "2021"
default-run = "day3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
color-eyre = "0.6.2"
nom = "7.1.3"
camino = "1.1.6"
indexmap = "2.0.0"
id_tree = "1.8.0"
regex = "1.10.2"
combine = "4.6.6"

[[bin]]
name = "day1"
path = "bin/day1/main.rs"

[[bin]]
name = "day2"
path = "bin/day2/main.rs"

[[bin]]
name = "day3"
path = "bin/day3/main.rs"

[[bin]]
name = "day4"
path = "bin/day4/main.rs"

[[bin]]
name = "day5"
path = "bin/day5/main.rs"

[[bin]]
name = "day6"
path = "bin/day6/main.rs"

[[bin]]
name = "day7"
path = "bin/day7/main.rs"

[[bin]]
name = "day8"
path = "bin/day8/main.rs"

[dev-dependencies]
test-case = "3.2.1"
